--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.5
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/bottom.png
+    - assets/images/branding.png
+    - assets/images/splash_gradient.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -87,3 +93,18 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+flutter_native_splash:
+  android: true
+  ios: true
+  fullscreen: true
+  branding: assets/images/bottom.png
+  image: assets/images/branding.png  # Logo in splash screen
+  background_image: assets/images/splash_gradient.png  # Background gradient
+
+  android_12:
+    image: assets/images/branding.png
+    branding: assets/images/bottom.png
+    icon_background_color: "#FFFFFF"
+    fullscreen: true  # error here just fixed error without removing the comment
