--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
