--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   firebase_auth: ^5.5.2
   flutter_svg: ^2.0.17
   google_sign_in: ^6.3.0
+  email_auth: ^2.0.0
+  pinput: ^5.0.1
+  url_launcher: ^6.3.1
+  app_links: ^6.4.0
 
 dev_dependencies:
   flutter_test:
