--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <application
         android:label="Attendee"
         android:name="${applicationName}"
@@ -26,9 +29,15 @@
 
 
 
+
             <meta-data
                 android:name="android.app.warmUpFrame"
                 android:value="false" />
+
+
+
+
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -57,6 +66,31 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+
+
+
+
+        <!-- Notification Channel -->
+        <meta-data android:name="com.google.Firebase.messaging.default_notification_channel_id"
+            android:value="ecomm-channel"/>
+
+        <!-- Firebase Messaging Service -->
+        <receiver android:name="com.dexterous.flutterlocalnotifications.scheddulednotificationbootreceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="default_channel"/>
+
+
+
+
+
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
