--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,15 @@ dependencies:
   pinput: ^5.0.1
   url_launcher: ^6.3.1
   app_links: ^6.4.0
+  curved_navigation_bar: ^1.0.6
+  googleapis_auth: ^2.0.0
+  http: ^1.3.0
+  firebase_messaging: ^15.2.5
+  app_settings: ^6.1.1
+  flutter_local_notifications: ^19.0.0
+  flutter_slidable: ^4.0.0
+  flutter_swipe_button: ^2.1.3
+  geolocator: ^13.0.4
 
 dev_dependencies:
   flutter_test:
