--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,6 +35,12 @@
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
 		<key>UISupportedInterfaceOrientations~ipad</key>
+		<key>NSPhotoLibraryUsageDescription</key>
+        <string>We need access to your photo library to change your profile picture.</string>
+        <key>NSCameraUsageDescription</key>
+        <string>We need access to your camera to allow you to take a photo.</string>
+
+
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
 			<string>UIInterfaceOrientationPortraitUpsideDown</string>
@@ -49,5 +55,17 @@
 		<true/>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
+
+		 <key>CFBundleURLTypes</key>
+          <array>
+            <dict>
+              <key>CFBundleTypeRole</key>
+              <string>Editor</string>
+              <key>CFBundleURLSchemes</key>
+              <array>
+                <string>[YOUR_SCHEME]</string>
+              </array>
+            </dict>
+          </array>
 	</dict>
 </plist>
