--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   flutter_slidable: ^4.0.0
   flutter_swipe_button: ^2.1.3
   geolocator: ^13.0.4
+  image_picker: ^1.1.2
+  supabase_flutter: ^2.8.4
+  dotenv: ^4.2.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -106,6 +110,7 @@ flutter:
     - assets/images/bottom.png
     - assets/images/branding.png
     - assets/images/splash_gradient.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
