reset functionality added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -49,6 +49,14 @@
             </intent-filter>
 
 
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="com.example.attendee" android:host="reset-password" />
+            </intent-filter>
+
+
 
 
 
@@ -63,6 +71,9 @@
                     android:scheme="io.supabase.flutterquickstart"
                     android:host="login-callback" />
             </intent-filter>
+
+
+
 
 
 
