--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,5 +67,46 @@
               </array>
             </dict>
           </array>
+
+
+          <!-- Google Sign-in Section -->
+          <key>CFBundleURLTypes</key>
+          <array>
+          	<dict>
+          		<key>CFBundleTypeRole</key>
+          		<string>Editor</string>
+          		<key>CFBundleURLSchemes</key>
+          		<array>
+          			<!-- TODO Replace this value: -->
+          			<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
+          			<string>com.googleusercontent.apps.1086961716031-9fgtutdctvskbrrdmlprgcqpc8cheiu7</string>
+          		</array>
+          	</dict>
+          </array>
+
+          <key>CFBundleURLTypes</key>
+          <array>
+            <dict>
+              <key>CFBundleURLSchemes</key>
+              <array>
+                <string>io.supabase.flutterquickstart</string>
+              </array>
+            </dict>
+          </array>
+
+
+            <key>CFBundleURLTypes</key>
+            <array>
+              <dict>
+                <key>CFBundleURLSchemes</key>
+                <array>
+                  <string>com.example.attendee</string>
+                </array>
+              </dict>
+            </array>
+
+
+
+
 	</dict>
 </plist>
