--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   dotenv: ^4.2.0
   flutter_dotenv: ^5.2.1
   uri: ^1.0.0
+  heif_converter: ^1.0.1
+  provider: ^6.1.4
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
