--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -107,6 +107,10 @@
 
 
 
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>This app needs access to location when open.</string>
+
+
 
 	</dict>
 </plist>
