--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,10 @@ dependencies:
   http: ^1.3.0
   firebase_messaging: ^15.2.5
   app_settings: ^6.1.1
-  flutter_local_notifications: ^19.0.0
+  flutter_local_notifications: ^19.1.0
   flutter_slidable: ^4.0.0
   flutter_swipe_button: ^2.1.3
-  geolocator: ^13.0.4
+  geolocator: ^14.0.0
   image_picker: ^1.1.2
   supabase_flutter: ^2.8.4
   dotenv: ^4.2.0
@@ -64,6 +64,7 @@ dependencies:
   heif_converter: ^1.0.1
   provider: ^6.1.4
   shared_preferences: ^2.5.3
+  swipeable_button_view: ^0.0.2
 
 
 dev_dependencies:
