--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   provider: ^6.1.4
   shared_preferences: ^2.5.3
   swipeable_button_view: ^0.0.2
+  flutter_phone_direct_caller: ^2.2.1
 
 
 dev_dependencies:
